[feat]: [CDS-78377] add variables overrides for custom stage env. step